--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "mongoose": "^8.1.2",
     "morgan": "~1.9.1",
     "node-fetch": "2",
+    "react-redux": "^9.1.0",
     "uid2": "^1.0.0"
   }
 }
