--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.4",
     "express": "~4.16.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "morgan": "~1.9.1",
     "node-fetch": "2",
